<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="5dp"
        android:background="@drawable/bg_circle"
        android:foreground="?selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/cover"
        app:layout_constraintEnd_toEndOf="@id/cover"
        app:layout_constraintStart_toStartOf="@id/cover"
        app:layout_constraintTop_toBottomOf="@id/cover" />

    <com.google.android.material.button.MaterialButton
        style="@style/AppTheme.Profile.RoundedButton"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        app:icon="@drawable/ic_camera"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@id/cover"
        app:layout_constraintEnd_toEndOf="@id/cover" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_circle_bordered"
        android:padding="14dp"
        app:srcCompat="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:textAppearance="@style/AppTheme.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/ic_chat_bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.google.android.material.button.MaterialButton
        style="@style/AppTheme.Profile.RoundedButton"
        android:id="@+id/add_bio"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:text="@string/add_bio"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:id="@+id/add_story_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/colorBlueLight"
        app:elevation="0dp"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/colorTitleBlue"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/add_bio"
        app:layout_constraintEnd_toStartOf="@+id/view_as_icon"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:id="@+id/view_as_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/colorGrayLight"
        app:elevation="0dp"
        app:srcCompat="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@id/add_bio"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_story_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:id="@+id/edit_profile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/colorGrayLight"
        app:elevation="0dp"
        app:srcCompat="@drawable/ic_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/add_bio"
        app:layout_constraintEnd_toStartOf="@+id/more_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_as_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:id="@+id/more_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/colorGrayLight"
        app:elevation="0dp"
        app:srcCompat="@drawable/ic_more"
        app:layout_constraintTop_toBottomOf="@id/add_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/add_to_story"
        android:textAppearance="@style/AppTheme.SubTitle2"
        android:textColor="@color/colorTitleBlue"
        app:layout_constraintTop_toBottomOf="@id/add_story_icon"
        app:layout_constraintEnd_toEndOf="@id/add_story_icon"
        app:layout_constraintStart_toStartOf="@id/add_story_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/view_as"
        android:textAppearance="@style/AppTheme.SubTitle2"
        app:layout_constraintTop_toBottomOf="@id/view_as_icon"
        app:layout_constraintEnd_toEndOf="@id/view_as_icon"
        app:layout_constraintStart_toStartOf="@id/view_as_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/edit_profile"
        android:textAppearance="@style/AppTheme.SubTitle2"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_icon"
        app:layout_constraintEnd_toEndOf="@id/edit_profile_icon"
        app:layout_constraintStart_toStartOf="@id/edit_profile_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/more"
        android:textAppearance="@style/AppTheme.SubTitle2"
        app:layout_constraintTop_toBottomOf="@id/more_icon"
        app:layout_constraintEnd_toEndOf="@id/more_icon"
        app:layout_constraintStart_toStartOf="@id/more_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>